--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -11,13 +11,18 @@
     <title>HEADER</title>
 </head>
 
+<div class="header">
 
-<div class="name">HOKUSAI</div>
-<div class="nav">
-    <a href="#">HOME</a>
-    <a href="#">REGISTRO</a>
+    <div class="name">HOKUSAI</div>
+    <!-- display none -->
+    <div class="name2"></div>
+
+    <div class="nav">
+        <a href="#">HOME</a>
+        <a href="#">REGISTRO</a>
+    </div>
+    
 </div>
-
 
 
 
