--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,1 +1,16 @@
-<p>footer works!</p>
+
+
+<div class="footer">
+    <a class="footer__text">Contact</a>
+    <a class="footer__text">About us</a>
+    <!-- intro links a redes -->
+    <a class="footer__text" href="#">
+        Instagram
+    </a>
+    <a class="footer__text" href="#">
+        twiter
+    </a>
+    <a class="footer__text" href="#">
+        facebook
+    </a>
+</div>
