--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,36 +1,17 @@
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- importacion Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>HEADER</title>
-</head>
 
 <div class="header">
 
-    <div class="name">HOKUSAI</div>
+    <div  class="name">HOKUSAI</div>
     <!-- display none -->
     <div class="name2"></div>
 
     <div class="nav">
-        <a href="#">HOME</a>
-        <a href="#">REGISTRO</a>
+        <a routerLink="/home">HOME</a>
+        <!-- <a routerLink="/registro">REGISTRO</a> -->
+        <a routerLink="/pagRegistro">REGISTRO</a>
+
     </div>
     
 </div>
 
-
-
-
-<!-- scrips Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-<body>
-    
-</body>
-</html>
