--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,9 @@
-<p>home-page works!</p>
+
+<!-- <div class="fondo"></div> -->
+<div class="container_home">
+    <p class="wellcome_text">Al sentirme enfermo durante el viaje <br>
+        mis sueños vagaron sobre un campo de yerba seca</p>
+   
+</div>
+
+
