--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -7,9 +7,10 @@
     <div class="name2"></div>
 
     <div class="nav">
-        <a routerLink="/home">HOME</a>
+        <a routerLink="/">HOME</a>
         <!-- <a routerLink="/registro">REGISTRO</a> -->
         <a routerLink="/pagRegistro">REGISTRO</a>
+        <a routerLink="/perfil">PERFIL</a>
 
     </div>
     
