--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -11,6 +11,7 @@
         <!-- <a routerLink="/registro">REGISTRO</a> -->
         <a routerLink="/pagRegistro">REGISTRO</a>
         <a routerLink="/perfil">PERFIL</a>
+        <a routerLink="libros">LIBROS</a>
 
     </div>
     
