--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -1,5 +1,8 @@
 
+<div class="main">
+    
+    <app-formulario-registro></app-formulario-registro>
 
+</div>
 
-<app-formulario-registro></app-formulario-registro>
 
