--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -12,6 +12,11 @@
         <a routerLink="/pagRegistro">REGISTRO</a>
         <a routerLink="/perfil">PERFIL</a>
         <a routerLink="libros">LIBROS</a>
+        <a routerLink="crearLibro">AÑADE UN LIBRO</a>
+        <a routerLink="editarLibro">EDITA UN LIBRO</a>
+
+
+
 
     </div>
     
